--- a/test-room/index.html
+++ b/test-room/index.html
@@ -7,6 +7,11 @@
 
     <script type="text/x-template" id="second-component">
         <h2> This is My Second Component {{count}}</h2>
+        <div nested-component ></div>
+    </script>
+    
+    <script type="text/x-template" id="nested-component">
+        <h2> This is My Nested Component {{_test}}</h2>
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
